# acdict

./: .gitignore  README.md  requirements.txt  setup.cfg
acdict/cmd/: manage.py
