[metadata]
name = acdict
version = 1.0.0
summary = Active Dictionary
description-file =
    README.md
home-page = https://github.com/PavelMPD/acdict
classifier =
    License :: Other/Proprietary License
    Programming Language :: Python :: 2.7

[files]
packages =
    acdict

[entry_points]
console_scripts =
    acdict-manage = acdict.cmd.manage:main
